--- a/stylus/home.styl
+++ b/stylus/home.styl
@@ -171,6 +171,10 @@ footer
         &:last-child
             margin-right 0
 
+.last-mobile
+    +below(480px)
+        margin-right 0 !important
+
 .app-container
     position absolute
     top 100px
